objects/Essentials__c.object
<CustomObject>
    <label>Essentials Quick Link</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Essentials Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Essentials Quick Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Essentials Quick Links</relationshipLabel>
        <relationshipName>Essentials_Quick_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airtable Onboarding</fullName>
                </value>
                <value>
                    <fullName>Airtable Home</fullName>
                </value>
                <value>
                    <fullName>Google Sheet</fullName>
                </value>
                <value>
                    <fullName>Google Drive</fullName>
                </value>
                <value>
                    <fullName>Essentials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>